src/test/resources/frontendReference/invalid/semanticErr/class/simple/classDoubleNames.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:2 -- VARIABLE t was already defined in this scope.
Semantic Error at 12:2 -- VARIABLE t was already defined in this scope.